assets/css/main.css
body{
    margin: 0;
    padding: 0;
    min-width: 340px;
}
header{
    background: black;
    color: whitesmoke;
    padding: 1.5rem 1rem;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
}
#made-in-usa{
    display: inline-block;
    margin: auto 0;
    height: 60px;
    width: 140px;
}
 .made-in-usa{
    display: inline-block;
    margin: auto;
    height: 60px;
    width: 140px;
}
footer{
    background: black;
    color: whitesmoke;
    padding: 3rem 1rem;
    text-align: center;
    display: flex; 
    flex-direction: column;
}
footer a{
    color: white;
    margin: 0.5rem 0;
    text-decoration: none;
}
footer a:hover{
    text-decoration: underline;
}
.container{
    display: block;
    margin: auto;
    width: 70%;
    margin: 1rem auto;
}
.outputOne{
    display: block;
    margin: 1rem auto;
    width: 70%;
}
.outputTwo{
    display: block;
    margin: 1rem auto;
    width: 70%;
}
.card{
    width: 100%;
}
.bubble{
    height: 30px;
    width: 40px;
    border-radius: 10%;
    display: inline-block;
    vertical-align: bottom;
}
.d-flex{
    display: flex;
    flex-direction: row;
}
.d-col{
    display: flex;
    flex-direction: column;
    margin: 1rem;
}
.d-l{
    width: 25%;
    border-radius: 10px;
    max-width: 300px;
}
.d-r{
    width: 75%;
    padding: 0 1rem; 
}
.color{
    font-weight: bold;
    font-size: 22px;
    display: flex;
    align-items: center;
}
.details{
    font-size: 18px;
}
.jumbo{
    display: flex;
    flex-direction: row;
    padding: 3rem 0; 
}
.jumbo-half{
    width: 50%;
    padding: 1rem;
}
.jumbo-image{
    max-width: 500px;
    width: 100%;
    margin: auto;
    display: block;
    border-radius: 10px;
}
.lead{
    font-size: 20px;
    text-align: left;
    line-height: 22px;
}
label{
    font-size: 14px;
    vertical-align: top; 
}
select{
    font-size: 18px;
    width: 10rem; 
    background-color: whitesmoke;
    color: black;
    border-radius: 10px;
    padding: 0.5rem 1rem;
}

.btn-black{
    background: black;
    color: white;
    padding: 10px 48px;
    text-decoration: none;
    border-radius: 30px;
}

.bottom-stack{
    display: block; 
    max-width: 100%; 
    height: 125px; 
    margin: 3rem auto;
}

.thumb{
    height: 60px;
}

@media only screen and (max-width: 1000px) {
    #made-in-usa{
        display: none;
    }
    .container{
        width: 90%;
        margin: auto;
    }
    .d-flex{
        flex-direction: column;
    }
    .d-l{
        height: 125px;
        width: 100%;
        border-radius: 10px;
    }
    .d-r{
        width: 90%;
    }
    select{
        width: 100%;
    }
    .jumbo{
        flex-direction: column;
        padding: 2rem; 
    }
    .jumbo-half{
        width: 100%;
        text-align: center;
        padding: 0;
    }
    .jumbo-image{
        width: 100%;
    }
    .lead{
        font-size: 18px;
        line-height: 20px;
    }
    .bottom-stack{
        display: block; 
        max-width: 100%;
        height: auto; 
        max-height: 125px; 
        margin: 3rem auto;
    }
}

